--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -1,4 +1,4 @@
-name: Swift
+name: The Satellite Unit Tests
 
 on:
   push:
@@ -8,16 +8,14 @@ on:
 
 jobs:
   build:
-    name: Build package
+    name: Run unit tests in SatelliteTests
     runs-on: macos-latest
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v3
       with:
         swift-version: "5.7.0"
-    - name: Building...
-      run: |
-          xcodebuild build -scheme Satellite -destination 'platform=iOS Simulator,name=iPhone 14 Pro,OS=latest'
     - name: Testing...
       run: |
           xcodebuild clean test -scheme Satellite -destination 'platform=iOS Simulator,name=iPhone 14 Pro,OS=latest'
